export const signInSelectors = {
  emailInput: "email-input-field",
  passwordInput: "password-input-field",
  signInButton: "sign-in-button",
  forgotPasswordButton: "forgot-password-button",
  goToSignUpPageButton: "go-to-sign-up-page-button",
} as const;
