export const signUpSelectors = {
  emailInput: "email-input-field",
  phoneInput: "phone-number-input-field",
  passwordInput: "password-input-field",
  confirmPasswordInput: "confirm-password-input-field",
  signUpButton: "sign-up-button",
  goToSignInPageButton: "go-to-sign-in-page-button",
} as const;
