export const verifyEmailSelectors = {
  resendEmailButton: "resend-email-button",
} as const;
